--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   }
 } */
 
+* {
+  box-sizing: border-box;
+}
+
 @supports (font: -apple-system-body) and (-webkit-appearance: none) {
   img[loading='lazy'] {
     clip-path: inset(0.6px);
